# EP_TecProg

./: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Manual_e_Funcionamento.txt  NEWS  README  README.md  compila  config.h  config.h.in  config.status  configure  configure.ac  dados.l  ep1TecProg  ep1TecProg.c  ep3.tar.xz  explosao1.xpm  explosao11.xpm  explosao13.xpm  explosao16.xpm  explosao3.xpm  explosao4.xpm  explosao6.xpm  explosao7.xpm  explosao8.xpm  fundo.xpm  main.c  nave.xpm  nave1-000g.xpm  (+79 more)
IMAGENS PARA FINALIZAR ESSA BAGAÇA/: coracao.xpm
IMAGENS PARA FINALIZAR ESSA BAGAÇA/CORAÇOES/: coracao.xpm
IMAGENS PARA FINALIZAR ESSA BAGAÇA/explosao/: explosao10.xpm  explosao12.xpm  explosao14.xpm  explosao15.xpm  explosao2.XPM  explosao5.XPM  explosao9.xpm
